--- a/newsapp/src/app/tab2/tab2.page.html
+++ b/newsapp/src/app/tab2/tab2.page.html
@@ -1,9 +1,34 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+    <ion-toolbar class = "container">
+      <ion-title (click)= "ionViewDidLoad()"> 
+        CATEGORIES
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <!--Slider de categorías-->
+  <ion-content>
+      <ion-slides [options]="sliderConfig">
+        <ion-slide *ngFor="let cat of categories">
+          <ion-card class= "slides" (click)= "openCategory()" >
+          
+                <img src= "../../assets/images/categories/{{ cat.img }}">
+           
+          </ion-card>
+        </ion-slide>
+      </ion-slides> 
+  
+  
+  <!--Noticias-->
+    <ion-card *ngFor="let article of news.response.articles">
+      <ion-card-header>
+          <ion-card-content>
+              <img [src]= "article.urlToImage" style= "height: 100%;">
+           </ion-card-content>
+        <ion-card-title>{{ article.title }}</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+          {{ article.description }}
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
