--- a/newsapp/src/app/tab2/tab2.page.html
+++ b/newsapp/src/app/tab2/tab2.page.html
@@ -30,9 +30,11 @@
       <ion-card-content>
           {{ article.description }}
       </ion-card-content>
-      <ion-chip color="tertiary" (click)="saveNew(this.article)">
-        <ion-icon name="star-outline"></ion-icon>
-        <ion-label>Save New</ion-label>
-      </ion-chip>      
+      <ion-grid>
+        <ion-chip color="tertiary" (click)="saveNew(this.article)">
+          <ion-icon name="star-outline"></ion-icon>
+          <ion-label>Save New</ion-label>
+        </ion-chip>
+      </ion-grid>  
     </ion-card>
   </ion-content>
