--- a/newsapp/src/app/tab2/tab2.page.html
+++ b/newsapp/src/app/tab2/tab2.page.html
@@ -19,6 +19,7 @@
   
   
   <!--Noticias-->
+  <div *ngIf="news != undefined">
     <ion-card *ngFor="let article of news.response.articles">
       <ion-card-header>
           <ion-card-content>
@@ -33,8 +34,9 @@
       <ion-grid>
         <ion-chip color="tertiary" (click)="saveNew(this.article)">
           <ion-icon name="star-outline"></ion-icon>
-          <ion-label>Save New</ion-label>
+          <ion-label>Save Article</ion-label>
         </ion-chip>
       </ion-grid>  
     </ion-card>
+    </div>
   </ion-content>
