Styling auth and register form

--- a/newsapp/src/app/auth/register/register.page.html
+++ b/newsapp/src/app/auth/register/register.page.html
@@ -1,7 +1,7 @@
-<ion-content color="primary">
+<ion-content>
   <form #form="ngForm" (ngSubmit) = "register(form)">
     <ion-grid>
-      <ion-row color="primary" justify-content-center>
+      <ion-row color="" justify-content-center>
         <ion-col align-self-centered size-md="6" size-lg="5" size-xs="12">
           <div tex-center>
             <h3>Create your account!</h3>
