--- a/newsapp/src/app/auth/register/register.page.scss
+++ b/newsapp/src/app/auth/register/register.page.scss
@@ -1,8 +1,12 @@
 ion-item{
-  --background: #3880ff;
+  --background: #fcba04;
   --color: #fff;
 }
 
 ion-button{
-  --background: #062f77;
+  --background: #ec7505;
+}
+ion-content{
+  --background: #fcba04;
+  --color: #fff;
 }
