--- a/newsapp/src/app/auth/login/login.page.html
+++ b/newsapp/src/app/auth/login/login.page.html
@@ -1,13 +1,7 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content color="primary" padding>
+<ion-content color="" padding>
   <form #form="ngForm" (ngSubmit)="login(form)">
     <ion-grid>
-      <ion-row color="primary" justify-content-center>
+      <ion-row color="" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div text-center>
             <h3>Login</h3>
