search-bar implemented in tab2

--- a/newsapp/src/app/tab2/tab2.page.scss
+++ b/newsapp/src/app/tab2/tab2.page.scss
@@ -15,14 +15,25 @@ ion-card.slides {
     
 
 }
- /*ion-card-title {
-    text-align: center;
-    position: contents;
-    padding: 70px 0;
-    font-size: 14px;
+ion-toolbar{
 
-}*/
+}
 ion-card-content {
   height: 100%;
   width: 100%;
 }
+ion-button{
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
