--- a/newsapp/src/app/tab2/tab2.page.html
+++ b/newsapp/src/app/tab2/tab2.page.html
@@ -7,29 +7,32 @@
 </ion-header>
 <!--Slider de categorías-->
 <ion-content>
+    <ion-searchbar animated clearIcon [(ngModel)]="keyWords"></ion-searchbar>
     <ion-slides [options]="sliderConfig">
       <ion-slide *ngFor="let cat of categories">
-        <ion-card class= "slides" (click)= "openCategory()" >
+        <ion-card class= "slides" (click)= "openCategory(cat)" >
         
               <img src= "../../assets/images/categories/{{ cat.img }}">
          
         </ion-card>
       </ion-slide>
     </ion-slides> 
+    <ion-button (click)="search()">BUSCA</ion-button>
 
-
-<!--Noticias-->
-  <ion-card>
-    <ion-card-header>
-        <ion-card-content>
-            <img src= "../../assets/images/categories/image.jpg" style= "height: 100%;">
-         </ion-card-content>
-      <ion-card-title>Titular</ion-card-title>
-    </ion-card-header>
-  
-    <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
-    </ion-card-content>
-  </ion-card>
+   <!--Noticias-->
+   <div *ngIf="searchedNews; else elseblock">
+      <ion-card *ngFor="let article of news.articles">
+        <ion-card-header>
+           <ion-card-content>
+                <img [src]= "article.urlToImage" style= "height: 100%;">
+             </ion-card-content>
+          <ion-card-title>{{ article.title }}</ion-card-title>
+       </ion-card-header>
+    
+       <ion-card-content>
+           {{ article.description }}
+        </ion-card-content>
+    </ion-card>
+  </div>
+  <ng-template #elseblock><h1></h1></ng-template>
 </ion-content>
