--- a/newsapp/src/app/tab3/tab3.page.html
+++ b/newsapp/src/app/tab3/tab3.page.html
@@ -23,7 +23,7 @@
     </ion-fab-button>
   </ion-fab>
   <div *ngIf="news != undefined">
-    <ion-card class="light" *ngFor="let article of news.user[0].favNews; index as i">
+    <ion-card class="light" *ngFor="let article of news.user.favNews; index as i">
         <ion-card-header>
             <ion-card-content>
                 <img [src]= "article.urlToImage" style= "height: 100%;">
@@ -43,7 +43,7 @@
               </ion-chip>
             </ion-col>
             <ion-col>
-              <ion-chip *ngIf="news.user[0].favNews[i].url != undefined" color="tertiary" (click)="readArt(article)">
+              <ion-chip *ngIf="news.user.favNews[i].url != undefined" color="tertiary" (click)="readArt(article)">
                 <ion-icon name="bookmark"></ion-icon>
                 <ion-label>Read Article</ion-label>
               </ion-chip>
