--- a/newsapp/src/app/tab3/tab3.page.html
+++ b/newsapp/src/app/tab3/tab3.page.html
@@ -17,7 +17,7 @@
         FEED
       </ion-title>
   </ion-toolbar>
-  <ion-fab vertical="top" horizontal="start">
+  <ion-fab vertical="top" horizontal="start" (click)="loadSettings()">
     <ion-fab-button>
       <ion-icon name="settings"></ion-icon>
     </ion-fab-button>
