--- a/newsapp/src/app/tab2/tab2.page.html
+++ b/newsapp/src/app/tab2/tab2.page.html
@@ -32,7 +32,7 @@
 
   <div *ngIf="gotnews">
     <div *ngIf="searchedNews; else elseblock">
-      <ion-card *ngFor="let article of news.articles">
+      <ion-card *ngFor="let article of news.articles" (click)="goToArticle(article)">
         <ion-card-header>
           <ion-card-content>
             <img [src]="article.urlToImage" style="height: 100%;">
