--- a/newsapp/src/app/settings/settings.page.html
+++ b/newsapp/src/app/settings/settings.page.html
@@ -1,12 +1,17 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button [text]="buttonText" [icon]="buttonIcon">
+      </ion-back-button>
+    </ion-buttons>
     <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
   <ion-item>
     <ion-label>Favourite language</ion-label>
-    <ion-select [(ngModel)]="lang" class="selectedSetting" okText="Guardar" *ngIf="gotLang" value="{{favLang.user.preferences.favLanguage}}" cancelText="Cancelar" (ionChange)="onLangChange()">
+    <ion-select [(ngModel)]="lang" class="selectedSetting" okText="Guardar" *ngIf="gotLang"
+      value="{{favLang.user.preferences.favLanguage}}" cancelText="Cancelar" (ionChange)="onLangChange()">
       <ion-select-option value="ar">العربية</ion-select-option>
       <ion-select-option value="de">Deutsch</ion-select-option>
       <ion-select-option value="en">English</ion-select-option>
@@ -24,7 +29,8 @@
   </ion-item>
   <ion-item>
     <ion-label>Favourite country</ion-label>
-    <ion-select [(ngModel)]="country" class="selectedSetting" okText="Guardar" cancelText="Cancelar" *ngIf="gotCountry" value="{{favCountry.user.preferences.favCountry}}" (ionChange)="onCountryChange()">
+    <ion-select [(ngModel)]="country" class="selectedSetting" okText="Guardar" cancelText="Cancelar" *ngIf="gotCountry"
+      value="{{favCountry.user.preferences.favCountry}}" (ionChange)="onCountryChange()">
       <ion-select-option value="ae">United arabic emirates</ion-select-option>
       <ion-select-option value="ar">Argentina</ion-select-option>
       <ion-select-option value="at">Australia</ion-select-option>
@@ -82,11 +88,11 @@
   </ion-item>
   <ion-item>
     <ion-label>Night mode</ion-label>
-    <ion-toggle slot="end"></ion-toggle>
+    <ion-toggle (ionChange)="onNightMode()" slot="end"></ion-toggle>
   </ion-item>
   <ion-item>
     <ion-label>User stadistics</ion-label>
   </ion-item>
 
-   
+
 </ion-content>
