--- a/newsapp/src/app/settings/settings.page.html
+++ b/newsapp/src/app/settings/settings.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-item>
     <ion-label>Favourite language</ion-label>
-    <ion-select [(ngModel)]="lang" class="selectedSetting" okText="Guardar" *ngIf="gotLang"
+    <ion-select [(ngModel)]="lang" class="selectedSetting" okText="Guardar" *ngIf="gotLang && gotid"
       value="{{favLang.user.preferences.favLanguage}}" cancelText="Cancelar" (ionChange)="onLangChange()">
       <ion-select-option value="ar">العربية</ion-select-option>
       <ion-select-option value="de">Deutsch</ion-select-option>
@@ -29,7 +29,7 @@
   </ion-item>
   <ion-item>
     <ion-label>Favourite country</ion-label>
-    <ion-select [(ngModel)]="country" class="selectedSetting" okText="Guardar" cancelText="Cancelar" *ngIf="gotCountry"
+    <ion-select [(ngModel)]="country" class="selectedSetting" okText="Guardar" cancelText="Cancelar" *ngIf="gotCountry && gotid"
       value="{{favCountry.user.preferences.favCountry}}" (ionChange)="onCountryChange()">
       <ion-select-option value="ae">United arabic emirates</ion-select-option>
       <ion-select-option value="ar">Argentina</ion-select-option>
