--- a/newsapp/src/app/tab2/tab2.page.html
+++ b/newsapp/src/app/tab2/tab2.page.html
@@ -35,7 +35,12 @@
       <ion-card *ngFor="let article of news.articles" (click)="goToArticle(article)">
         <ion-card-header>
           <ion-card-content>
-            <img [src]="article.urlToImage" style="height: 100%;">
+            <div *ngIf="article.urlToImage != null && article.urlToImage != undefined">
+              <img [src]="article.urlToImage" style="height: 100%;">
+            </div>
+            <div *ngIf="article.urlToImage == null">
+              <img src="https://i.imgur.com/U4nXWjs.png" style="height: 100%;">
+            </div>
           </ion-card-content>
           <ion-card-title>{{ article.title }}</ion-card-title>
           <ion-chip color="dark">
