--- a/newsapp/src/app/edit-user/edit-user.page.html
+++ b/newsapp/src/app/edit-user/edit-user.page.html
@@ -41,11 +41,10 @@
               <ion-button expand="block" (click)="goBack()">Go back</ion-button>
             </ion-col>
             <ion-col>
-              <ion-button expand="block" [disabled]="true" >Deactivate user</ion-button>
+              <ion-button expand="block" (click)="deactivate()">Deactivate user</ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
       </ion-grid>
-  
     </form>
   </ion-content>
