--- a/newsapp/src/app/tab2/tab2.page.html
+++ b/newsapp/src/app/tab2/tab2.page.html
@@ -30,10 +30,11 @@
   <!--Noticias-->
 
 
-  <div *ngIf="gotnews; else loadCategories">
-    <div *ngIf="searchedNews; else loadCategories">
-        <ion-card *ngFor="let article of articles">
-            
+  <div *ngIf="gotnews">
+    <div *ngIf="searchedNews; else elseblock">
+      <ion-card *ngFor="let article of news.articles">
+
+        <ion-card-header (click)="goToArticle(article)">
           <ion-card-content>
             <div *ngIf="article.urlToImage != null && article.urlToImage != undefined">
               <img [src]="article.urlToImage" style="height: 100%;">
@@ -42,9 +43,7 @@
               <img src="https://i.imgur.com/U4nXWjs.png" style="height: 100%;">
             </div>
           </ion-card-content>
-          <ion-card-header  (click)="goToArticle(article)">
           <ion-card-title>{{ article.title }}</ion-card-title>
-        </ion-card-header>
           <ion-chip color="dark">
             <ion-icon name="time"></ion-icon>
             <ion-label> {{(article.publishedAt)}}</ion-label>
@@ -53,7 +52,8 @@
             <ion-icon name="person"></ion-icon>
             <ion-label> {{article.author}}</ion-label>
           </ion-chip>
-        <ion-card-content  (click)="goToArticle(article)">
+        </ion-card-header>
+        <ion-card-content (click)="goToArticle(article)">
           {{ article.description }}
         </ion-card-content>
         <ion-grid>
@@ -76,44 +76,5 @@
   <ng-template #elseblock>
     <h1></h1>
   </ng-template>
-  <ng-template #loadCategories>
-    <div *ngIf="news != undefined; else elseblock">
-        <ion-card *ngFor="let article of articles" (click)="goToArticle(article)"> 
-            <ion-card-content>
-                <div *ngIf="article.urlToImage != null && article.urlToImage != undefined">
-                  <img [src]="article.urlToImage" style="height: 100%;">
-                </div>
-                <div *ngIf="article.urlToImage == null">
-                  <img src="https://i.imgur.com/U4nXWjs.png" style="height: 100%;">
-                </div>
-              </ion-card-content>
-              <ion-card-header  (click)="goToArticle(article)">
-              <ion-card-title>{{ article.title }}</ion-card-title>
-            </ion-card-header>
-              <ion-chip color="dark">
-                <ion-icon name="time"></ion-icon>
-                <ion-label> {{(article.publishedAt)}}</ion-label>
-              </ion-chip>
-              <ion-chip color="dark" *ngIf="article.author">
-                <ion-icon name="person"></ion-icon>
-                <ion-label> {{article.author}}</ion-label>
-              </ion-chip>
-            <ion-card-content  (click)="goToArticle(article)">
-              {{ article.description }}
-            </ion-card-content>
-            <ion-grid>
-              <ion-chip color="tertiary" (click)="saveNew(this.article)">
-                <ion-icon name="star-outline"></ion-icon>
-                <ion-label>Save Article</ion-label>
-              </ion-chip>
-            </ion-grid>
-          </ion-card>
-      <ion-infinite-scroll threshold="100px" (ionInfinite)="loadMoreArticles($event)">
-        <ion-infinite-scroll-content
-          loadingSpinner="bubbles"
-          loadingText="Pioliin">
-        </ion-infinite-scroll-content>
-      </ion-infinite-scroll>
-  </div>
-  </ng-template>
+
 </ion-content>
